--- a/.gitmodules
+++ b/.gitmodules
@@ -133,3 +133,6 @@
 [submodule "third_party/flash-attention"]
 	path = third_party/flash-attention
 	url = https://github.com/Dao-AILab/flash-attention.git
+[submodule "third_party/openrng"]
+	path = third_party/openrng
+	url = https://git.gitlab.arm.com/libraries/openrng.git
